fix populars cards flex direction to row on tablet and desktops

--- a/style.css
+++ b/style.css
@@ -478,6 +478,7 @@
   .populars__cards {
     width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
   }
 
